# beancount-automation

./: .gitignore  Cargo.toml  README.md  vercel.json
.github/workflows/: deploy.yml
api/: Cargo.toml  beancount.rs  config.toml
beancount/: Cargo.toml
beancount-core/: Cargo.toml
beancount-core/src/: lib.rs  settings.rs  transaction.pest
beancount/src/: parser.rs
bot-message/: Cargo.toml
bot-message/src/: lib.rs  telegram.rs
parser/: Cargo.toml  build.rs
parser/src/: lib.rs  settings.rs
repository/: Cargo.toml
repository/src/: github_store.rs  lib.rs
src/: lib.rs
