[package]
name = "api"
version = "0.1.0"
edition = "2018"

[dependencies]
vercel_lambda = "*"
http = "0.1"
log = "0.4"
env_logger = "0.9.0"
serde_json = "1.0"
beancount = { version = "0.1.0", path = "../beancount" }
bot_message = { version = "0.1.0", path = "../bot-message" }
repository = { version = "0.1.0", path = "../repository" }
anyhow = "1.0.48"

[lib]
name = "beancount"
path = "beancount.rs"
