[package]
name = "beancount_core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
regex = "1.5.4"
lazy_static = "1.4.0"
anyhow = "1.0.48"
config = "0.11.0"
serde = {version = "1.0", features = ["derive"]}
pest = "2.0"
pest_derive = "2.0"
